beautification of the source - fixes in KLP tries - still no result

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,6 @@
 obj-m := sys_call_hijack.o
-#obj-m += livepatch.o
+obj-m += livepatch.o
+
 KERNEL_DIR = /lib/modules/$(shell uname -r)/build
 PWD = $(shell pwd)
 all:
