--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 obj-m := sys_call_hijack.o
-obj-m += livepatch.o
+#obj-m += livepatch.o
 
 KERNEL_DIR = /lib/modules/$(shell uname -r)/build
 PWD = $(shell pwd)
 all:
 	 $(MAKE) -C $(KERNEL_DIR) SUBDIRS=$(PWD)
 clean:
-	 rm -rf *.o *.ko *.symvers *.mod.* *.order
+	 rm -rf *.o *.ko *.symvers *.mod.* *.order .sys_call_hijack.* .built-in.o.cmd
